# Hearthstone-Bot

./: README.md  bruteforce-coord.py  coords.txt  detect_colour.py  exit_bot.py  first.py  get_ss.py  pyproject.toml  read_mana.py  read_replace_hand_wait.py  read_start_game.py  read_text.py  read_turn_state.py
archive/: bruteforce-coord.py  bruteforce_coord.py  coords.txt  detect_colour.py  get_ss.py  read_mana.py  test.py
src/: coords.py  game.py  game_bot.py  main.py  read_replace_hand_wait.py  read_start_game.py  read_text.py  read_turn_state.py
