[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
dependencies = [
    "numpy",
    "opencv-python",
    "pygetwindow",
    "pynput",
    "pyautogui",
    "pytesseract",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
